max results = 50, display message in case no result, or max result reached

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             <div class="form-group">
               <label for="selectQuery">Select a Query</label>
               <select class="form-control" id="selectQuery">
-                <option value="title">Query on title</option>
+                <option value="title">Query on title (select all the movies that contains your word(s) in the title)</option>
                 <option value="plot">Query on plot</option>
                 <option value="year">Query on year</option>
                 <option value="rank">Query on rank</option>
