--- a/public/upload.html
+++ b/public/upload.html
@@ -8,7 +8,7 @@
   <title>Nosql Application</title>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link href="css/upload.css" rel="stylesheet">
+  <link href="public/css/upload.css" rel="stylesheet">
 </head>
 <body>
 
@@ -26,6 +26,7 @@
             <button class="btn btn-lg upload-btn" type="button">Upload File</button>
           </div>
         </div>
+        <div id="result_form"></div>
       </div>
     </div>
   </div>
@@ -34,6 +35,6 @@
 
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="javascript/upload.js"></script>
+  <script src="public/javascript/upload.js"></script>
 </body>
 </html>
