all queries are working

--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,10 @@
               <label for="selectQuery">Select a Query</label>
               <select class="form-control" id="selectQuery">
                 <option value="title">Query on title (select all the movies that contains your word(s) in the title)</option>
-                <option value="plot">Query on plot</option>
-                <option value="year">Query on year</option>
-                <option value="rank">Query on rank</option>
-                <option value="rate">Query on rate</option>
+                <option value="plot">Query on plot (select all the movies that contains your word(s) in the plot)</option>
+                <option value="year">Query on year (select all the movies from this year)</option>
+                <option value="rank">Query on rank (select all the movies with a rank between your range)</option>
+                <option value="rate">Query on rating (select all the movies with a rating between your range)</option>
               </select>
             </div>
           </form>
