--- a/public/upload.html
+++ b/public/upload.html
@@ -55,6 +55,17 @@
 
       <input id="upload-input" type="file" name="uploads[]" multiple="multiple"></br>
 
+      <div class="row">
+        <div id="query">
+          <form>
+            <div class="form-group">
+              <label for="inputTitle">Query title</label>
+              <input type="text" class="form-control" id="inputTitle" placeholder="Enter the title of the new query">
+            </div>
+          </form>
+        </div>
+        <button type="button" id="search" class="btn btn-outline-success">Add query</button>
+      </div>
     </div>
   </div>
 
