--- a/public/upload.html
+++ b/public/upload.html
@@ -35,7 +35,7 @@
         </div>
       </nav>
 
-      <div class="row">
+      <div class="row" id="uploadRow">
         <div class="col-xs-12" id="upload">
           <div class="panel panel-default">
             <div class="panel-body">
@@ -55,17 +55,24 @@
 
       <input id="upload-input" type="file" name="uploads[]" multiple="multiple"></br>
 
-      <div class="row">
-        <div id="query">
-          <form>
-            <div class="form-group">
-              <label for="inputTitle">Query title</label>
-              <input type="text" class="form-control" id="inputTitle" placeholder="Enter the title of the new query">
-            </div>
-          </form>
-        </div>
-        <button type="button" id="search" class="btn btn-outline-success">Add query</button>
+      <div id="addQuery">
+        <h2>Add your query</h2>
+        <br>
+        <form>
+          <div class="form-group">
+            <label for="inputTitle">Query title</label>
+            <input type="text" class="form-control" id="inputTitle" placeholder="Enter the title of the new query">
+          </div>
+          <div class="form-group">
+            <label for="inputQuery">Query body</label>
+            <textarea class="form-control" id="inputQuery" rows="5" placeholder='{
+        "title": "***"&#10;}'></textarea>
+            <medium id="inputQueryHelp" class="form-text text-muted">Enter your query like the example, replacing the parameters by "***"</medium>
+          </div>
+        </form>
+        <button type="button" id="buttonAdd" class="btn btn-outline-success">Add query</button>
       </div>
+
     </div>
   </div>
 
